[gd_scene load_steps=9 format=1]

[ext_resource path="res://Instructions.gd" type="Script" id=1]
[ext_resource path="res://InstructionsLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://LiberationSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Graphics/Left.png" type="Texture" id=4]
[ext_resource path="res://Graphics/LeftHover.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Right.png" type="Texture" id=6]
[ext_resource path="res://Graphics/RightHover.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 42
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="Instructions" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Fader" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Background" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
color = Color( 0.976471, 0.929412, 0.827451, 1 )

[node name="TopLine" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
color = Color( 0.482353, 0.360784, 0.0392157, 1 )

[node name="BottomLine" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
color = Color( 0.482353, 0.360784, 0.0392157, 1 )

[node name="InstructionsLevel" parent="." instance=ExtResource( 2 )]

[node name="PieceNameLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.191255 )
text = "PieceName"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PreviousButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="NextButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]


